(fix) wrap distance items to avoid word breaks

--- a/app/assets/stylesheets/components/st-supplier-page/_st-supplier-page.scss
+++ b/app/assets/stylesheets/components/st-supplier-page/_st-supplier-page.scss
@@ -1,3 +1,4 @@
 .st-supplier-page__radius-list-item {
 	margin-right: 10px;
+	white-space: nowrap;
 }
